Ramdisk: Major Update 1- 8.1 Support 2- Hidden Audit logs 3- Some fixes to sensors 4- disabled vaultkeeperd 5- bunch other stuff

--- a/Helios/Ramdisk/ramdisk/init.cronos.rc
+++ b/Helios/Ramdisk/ramdisk/init.cronos.rc
@@ -46,7 +46,7 @@ service sensorhubservice /system/bin/sensorhubservice
     seclabel u:r:sensorhubservice:s0
 	
 # SensorHub (Location Hub)
-service lhd /system/bin/lhd /system/etc/lhd.conf
+service lhd /system/vendor/bin/hw/lhd /system/vendor/etc/sensor/lhd.conf
     class main
     user gps
     group system inet net_raw
