--- a/Helios/Ramdisk/ramdisk/ueventd.rc
+++ b/Helios/Ramdisk/ramdisk/ueventd.rc
@@ -1,5 +1,37 @@
 subsystem adf
-	devname uevent_devname
+    devname uevent_devname
+
+subsystem graphics
+    devname uevent_devpath
+    dirname /dev/graphics
+
+subsystem drm
+    devname uevent_devpath
+    dirname /dev/dri
+
+subsystem oncrpc
+    devname uevent_devpath
+    dirname /dev/oncrpc
+
+subsystem adsp
+    devname uevent_devpath
+    dirname /dev/adsp
+
+subsystem msm_camera
+    devname uevent_devpath
+    dirname /dev/msm_camera
+
+subsystem input
+    devname uevent_devpath
+    dirname /dev/input
+
+subsystem mtd
+    devname uevent_devpath
+    dirname /dev/mtd
+
+subsystem sound
+    devname uevent_devpath
+    dirname /dev/snd
 
 # ueventd can only set permissions on device nodes and their associated
 # sysfs attributes, not on arbitrary paths.
@@ -24,9 +56,6 @@ subsystem adf
 /dev/ovr*                 0664   root       system
 /dev/tvr*                 0664   root       system
 
-# Anyone can read the logs, but if they're not in the "logs"
-# group, then they'll only see log entries for their UID.
-/dev/log/*                0666   root       log
 /dev/pmsg0                0222   root       log
 
 # the msm hw3d client device node is world writable/readable.
@@ -41,10 +70,8 @@ subsystem adf
 # these should not be world writable
 /dev/diag                 0660   radio      radio
 /dev/diag_arm9            0660   radio      radio
-/dev/android_adb          0660   adb        adb
-/dev/android_adb_enable   0660   adb        adb
 /dev/ttyMSM0              0600   bluetooth  bluetooth
-/dev/uhid                 0660   system     bluetooth
+/dev/uhid                 0660   uhid       uhid
 /dev/uinput               0660   system     bluetooth
 /dev/alarm                0664   system     radio
 /dev/power_on_alarm       0660   system     radio
@@ -120,14 +147,15 @@ subsystem adf
 # sensorhub
 /dev/ssp_sensorhub        0660   system     system
 /dev/ssp_data_injection   0660   system     system
+
 # Fingerprint Sensor
-/dev/vfsspi               0660   system     system
-/dev/esfp0                0660   system     system
-/dev/goodix_fp            0660   system     system
+/dev/vfsspi        0660   system     system
+/dev/esfp0        0660   system     system
 
 # sensor sysfs properties
 /sys/devices/virtual/input/input*	poll_delay	0660	system	radio
 /sys/devices/virtual/input/input*	enable		0660	system	radio
+
 # Sensorhub IIO
 /dev/ssp_sensorhub        0660   system		system
 /dev/iio:device*          0660   system		system
