--- a/Helios/Ramdisk/ramdisk/ueventd.samsungexynos7420.rc
+++ b/Helios/Ramdisk/ramdisk/ueventd.samsungexynos7420.rc
@@ -131,15 +131,18 @@
 /dev/esoc-*             0660   system    radio
 
 # sensor sysfs properties
-/sys/devices/virtual/input/input*	poll_delay	0660	system	radio
-/sys/devices/virtual/input/input*	enable		0660	system	radio
+/sys/devices/virtual/input/input*    poll_delay    0660    system    radio
+/sys/devices/virtual/input/input*    enable        0660    system    radio
+/dev/input/event*	  0660   system		input
 
 # Sensorhub IIO
-/dev/ssp_sensorhub        0660   system       system
-/dev/iio:device*          0660   system       system
+/dev/ssp_sensorhub        0660   system		system
+/dev/batch_io		  0600   system         system
+/dev/iio:device*          0660   system		system
 /sys/devices/14d30000.spi/spi_master/spi1/spi1.0/iio:device*    buffer/enable       0660    system    system
 /sys/devices/14d30000.spi/spi_master/spi1/spi1.0/iio:device*    buffer/length       0660    system    system
 /sys/bus/iio/devices/iio:device*    0664   system     radio
+/sys/bus/iio/devices/iio:device*	poll_delay	0660	system	system
 
 # Broadcom Sensorhub Bridge Driver
 /dev/bbd_sensor           0660   system     system
