drivers: video: AlwaysOn Original commit by Khongloi113 https://github.com/khongloi113/NOUGAT-KERNEL/commit/fc61a8359978e0aed02ac884aac6f71fc3c59a29 Adapted for Oreo
W.I.P (plans to improve and fix more functions in it)
This commit also contains the dynamic display res

--- a/drivers/video/exynos/decon/panels/Kconfig
+++ b/drivers/video/exynos/decon/panels/Kconfig
@@ -70,3 +70,16 @@ config PANEL_S6E3FA3_A8XE
 config PANEL_DUALIZATION
 	depends on PANEL_S6E3HF3_DYNAMIC
 	tristate "S6E3HF3 A3 PANEL DUALIZATION"
+	
+config PANEL_DDI_SPI
+	depends on EXYNOS_DECON_LCD && EXYNOS_MIPI_DSI
+	tristate "DDI SPI"
+	
+config VDDR_1p5V_ALPM
+	tristate "Grace : VDDR 1.5V in AOD mode"
+	default n
+
+config LCD_WEAKNESS_CCB
+	depends on EXYNOS_DECON_LCD && EXYNOS_MIPI_DSI
+	tristate "PANEL SUPPORT CCB"
+
