--- a/arch/arm64/configs/exynos7420-noblelte_defconfig
+++ b/arch/arm64/configs/exynos7420-noblelte_defconfig
@@ -328,7 +328,7 @@ CONFIG_SAMSUNG_DMADEV=y
 CONFIG_S5P_PM=y
 CONFIG_S5P_SLEEP=y
 # CONFIG_SAMSUNG_CORE_TEST is not set
-
+CONFIG_BOEFFLA_WL_BLOCKER=y
 #
 # SAMSUNG EXYNOS SoCs Support
 #
