Makefile: Optimize and Switch to Linaro Credits to TeamNexus : https://github.com/TeamNexus/android_kernel_samsung_exynos7420/commit/c4dc83de21389f59e05b7e2d3ebcb50a9067c264 Credits to Noxxxious : https://github.com/Noxxxious/S6/commit/6c389f112b797f88d14ae293865006b98a630338

--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -22,9 +22,7 @@ KBUILD_DEFCONFIG := defconfig
 KBUILD_CFLAGS	+= -mgeneral-regs-only
 KBUILD_CFLAGS	+= -fno-pic
 
-ifeq ($(CONFIG_CC_STACKPROTECTOR),y)
-KBUILD_CFLAGS	+=-fstack-protector-all
-endif
+KBUILD_CFLAGS	+= -fstack-protector
 
 KBUILD_CFLAGS	+= $(call cc-ifversion, -ge, 0500, -DCONFIG_ARCH_SUPPORTS_INT128)
 
