--- a/arch/arm64/configs/exynos7420-noblelte_defconfig
+++ b/arch/arm64/configs/exynos7420-noblelte_defconfig
@@ -1244,7 +1244,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
 CONFIG_CHECK_SIMSLOT_COUNT=y
-# CONFIG_CHECK_GPIO_DETECT is not set
+CONFIG_CHECK_GPIO_DETECT=y
 # CONFIG_TIMA_LOG is not set
 # CONFIG_SEC_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
@@ -4460,7 +4460,7 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_NOTIFIERS is not set
 # CONFIG_DEBUG_CREDENTIALS is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
-# CONFIG_FRAME_POINTER is not set
+CONFIG_FRAME_POINTER=y
 # CONFIG_BOOT_PRINTK_DELAY is not set
 
 #
