--- a/Helios/Ramdisk/ramdisk/init.rc
+++ b/Helios/Ramdisk/ramdisk/init.rc
@@ -30,18 +30,6 @@ on early-init
     # Set the security context of /postinstall if present.
     restorecon /postinstall
 
-    # Mount cgroup mount point for cpu accounting
-    mount cgroup none /acct cpuacct
-    mkdir /acct/uid
-
-    # root memory control cgroup, used by lmkd
-    mkdir /dev/memcg 0700 root system
-    mount cgroup none /dev/memcg memory
-    # app mem cgroups, used by activity manager, lmkd and zygote
-    mkdir /dev/memcg/apps/ 0755 system system
-    # cgroup for system_server and surfaceflinger
-    mkdir /dev/memcg/system 0550 system system
-
     start ueventd
 
 on init
@@ -61,6 +49,10 @@ on init
     symlink /system/odm /odm
     symlink /system/vendor /vendor
 
+    # Mount cgroup mount point for cpu accounting
+    mount cgroup none /acct cpuacct
+    mkdir /acct/uid
+
     # MirrorLink permission
     mkdir /dev/socket/mlaudio 0770 audioserver system
 
@@ -70,22 +62,18 @@ on init
     mkdir /dev/stune/foreground
     mkdir /dev/stune/background
     mkdir /dev/stune/top-app
-    mkdir /dev/stune/rt
     chown system system /dev/stune
     chown system system /dev/stune/foreground
     chown system system /dev/stune/background
     chown system system /dev/stune/top-app
-    chown system system /dev/stune/rt
     chown system system /dev/stune/tasks
     chown system system /dev/stune/foreground/tasks
     chown system system /dev/stune/background/tasks
     chown system system /dev/stune/top-app/tasks
-    chown system system /dev/stune/rt/tasks
     chmod 0664 /dev/stune/tasks
     chmod 0664 /dev/stune/foreground/tasks
     chmod 0664 /dev/stune/background/tasks
     chmod 0664 /dev/stune/top-app/tasks
-    chmod 0664 /dev/stune/rt/tasks
 
     # Mount staging areas for devices managed by vold
     # See storage config details at http://source.android.com/tech/storage/
@@ -261,8 +249,6 @@ on init
     mount pstore pstore /sys/fs/pstore
     chown system log /sys/fs/pstore/console-ramoops
     chmod 0440 /sys/fs/pstore/console-ramoops
-    chown system log /sys/fs/pstore/console-ramoops-0
-    chmod 0440 /sys/fs/pstore/console-ramoops-0
     chown system log /sys/fs/pstore/pmsg-ramoops-0
     chmod 0440 /sys/fs/pstore/pmsg-ramoops-0
 
@@ -438,17 +424,10 @@ on post-fs
     # create the lost+found directories, so as to enforce our permissions
     mkdir /cache/lost+found 0770 root root
 
-    # make fsdbg on /dev for filesystem debug info.
-    mkdir /dev/fsdbg 0775 root system
-
     omc_update
     start scs
 
 on late-fs
-    # Ensure that tracefs has the correct permissions.
-    # This does not work correctly if it is called in post-fs.
-    chmod 0755 /sys/kernel/debug/tracing
-
     # HALs required before storage encryption can get unlocked (FBE/FDE)
     class_start early_hal
 
@@ -494,20 +473,6 @@ on post-fs-data
 
     # create basic filesystem structure
     mkdir /data/misc 01771 system misc
-    mkdir /data/misc/recovery 0770 system log
-    copy /data/misc/recovery/ro.build.fingerprint /data/misc/recovery/ro.build.fingerprint.1
-    chmod 0440 /data/misc/recovery/ro.build.fingerprint.1
-    chown system log /data/misc/recovery/ro.build.fingerprint.1
-    write /data/misc/recovery/ro.build.fingerprint ${ro.build.fingerprint}
-    chmod 0440 /data/misc/recovery/ro.build.fingerprint
-    chown system log /data/misc/recovery/ro.build.fingerprint
-    mkdir /data/misc/recovery/proc 0770 system log
-    copy /data/misc/recovery/proc/version /data/misc/recovery/proc/version.1
-    chmod 0440 /data/misc/recovery/proc/version.1
-    chown system log /data/misc/recovery/proc/version.1
-    copy /proc/version /data/misc/recovery/proc/version
-    chmod 0440 /data/misc/recovery/proc/version
-    chown system log /data/misc/recovery/proc/version
     mkdir /data/misc/bluedroid 02770 bluetooth bluetooth
     # Fix the access permissions and group ownership for 'bt_config.conf'
     chmod 0660 /data/misc/bluedroid/bt_config.conf
@@ -632,9 +597,6 @@ on post-fs-data
     # Samsung Pay
     mkdir /efs/pfw_data 0760 spay spay
 
-    # Linux On Dex
-    mkdir /data/lxd 0770 root lod
-
     # MST/NFC Switch
     chown spay system /dev/mst_ctrl
     chmod 0660 /dev/mst_ctrl
@@ -752,6 +714,11 @@ on zygote-start && property:ro.crypto.state=encrypted && property:ro.crypto.type
     start zygote_secondary
 
 on boot
+
+    #knox_kap
+    chown system system /dev/knox_kap
+    chmod 0644 /dev/knox_kap
+
     # basic network init
     ifup lo
     hostname localhost
@@ -780,10 +747,6 @@ on boot
     chmod 0664 /sys/module/lowmemorykiller/parameters/adj
     chown root system /sys/module/lowmemorykiller/parameters/minfree
     chmod 0664 /sys/module/lowmemorykiller/parameters/minfree
-    chown root system /sys/module/lowmemorykiller/parameters/direct_adj
-    chmod 0664 /sys/module/lowmemorykiller/parameters/direct_adj
-    chown root system /sys/module/lowmemorykiller/parameters/direct_minfree
-    chmod 0664 /sys/module/lowmemorykiller/parameters/direct_minfree
 
     # Permissions for recovery_cause
     chown system system /sys/class/sec/sec_debug/recovery_cause
@@ -800,6 +763,7 @@ on boot
     chown system radio /sys/class/sec/switch/apo_factory
     chown system radio /sys/class/sec/switch/afc_disable
     chown system radio /sys/class/sec/switch/hiccup
+    chown system radio /sys/class/sec/switch/jig_disable	
 
     # OTG Test
     chown system radio /sys/class/host_notify/usb_otg/booster
@@ -933,6 +897,7 @@ on boot
    chown system radio /sys/class/power_supply/battery/factory_mode_bypass
    chown system radio /sys/class/power_supply/battery/normal_mode_bypass
    chown system radio /sys/class/power_supply/battery/factory_voltage_regulation
+   chown system radio /sys/class/power_supply/battery/factory_mode_disable
    chown media sdcard_rw /sys/class/power_supply/battery/store_mode
    chown sdcard_rw sdcard_rw /sys/class/power_supply/battery/call
    chown sdcard_rw sdcard_rw /sys/class/power_supply/battery/video
@@ -1045,8 +1010,6 @@ on boot
    chmod 0664 /sys/class/power_supply/battery/wc_cmd_info
    chown system radio /sys/class/power_supply/battery/batt_chip_id
    chmod 0660 /sys/class/power_supply/battery/batt_chip_id
-   chown system radio /sys/class/power_supply/battery/check_slave_chg
-   chmod 0660 /sys/class/power_supply/battery/check_slave_chg
    chown system radio /sys/class/power_supply/battery/error_cause
    chmod 0440 /sys/class/power_supply/battery/error_cause
    chown system radio /sys/class/power_supply/battery/cisd_fullcaprep_max
@@ -1127,6 +1090,10 @@ on boot
     # HMT relay mode
     chown radio system /sys/devices/virtual/relay_on
     chown radio system /sys/devices/virtual/data_on
+
+    # KNOX_NAP
+    chmod 0660 /dev/ncm_dev
+    chown system system /dev/ncm_dev
 
 #OTP
     mkdir /data/otp 0700 system system
@@ -1248,14 +1215,11 @@ on boot
     chown system radio /sys/class/sec/sec_epen/keyboard_mode
     chown system radio /sys/class/sec/sec_epen/epen_disable_mode
     chown system radio /sys/class/sec/sec_epen/aod_enable
-    chown system radio /sys/class/sec/sec_epen/aod_lcd_onoff_status
     chown system radio /sys/class/sec/sec_epen/screen_off_memo_enable
     chown system radio /sys/class/sec/sec_epen/dex_enable
     chown system radio /sys/class/sec/sec_epen/epen_fac_garage_mode
-    chown system radio /sys/class/sec/sec_epen/epen_fac_select_firmware
     chown system system /sys/class/sec/sec_epen/abnormal_reset_count
     chown system system /sys/class/sec/sec_epen/i2c_fail_count
-    chown system system /sys/class/sec/sec_epen/pen_out_count
 
     # Key
     chown system radio /sys/class/sec/sec_key/wakeup_keys
@@ -1325,10 +1289,6 @@ on charger
     write /sys/class/power_supply/battery/batt_update_data "/efs/Battery/battery_data.dat"
     class_start charger
 
-#@VOLD Emergency reset
-on property:vold.emergency_reset=1
-    start installd
-
 on property:vold.decrypt=trigger_reset_main
     class_reset main
 
@@ -1361,9 +1321,6 @@ on property:vold.decrypt=trigger_shutdown_framework
     class_reset late_start
     class_reset main
 
-on property:persist.sys.setupwizard=FINISH
-    pdp remove
-
 on property:sys.boot_completed=1
     pdp result
 
@@ -1378,10 +1335,6 @@ on property:sys.sysctl.extra_free_kbytes=*
     # PDP : Preload data preserve
     pdp LEDstate
 
-# set swappiness
-on property:sys.sysctl.swappiness=*
-    write /proc/sys/vm/swappiness ${sys.sysctl.swappiness}
-
 # "tcp_default_init_rwnd" Is too long!
 on property:sys.sysctl.tcp_def_init_rwnd=*
     write /proc/sys/net/ipv4/tcp_default_init_rwnd ${sys.sysctl.tcp_def_init_rwnd}
@@ -1391,10 +1344,6 @@ on property:security.perf_harden=0
 
 on property:security.perf_harden=1
     write /proc/sys/kernel/perf_event_paranoid 3
-
-# on shutdown
-# In device's init.rc, this trigger can be used to do device-specific actions
-# before shutdown. e.g disable watchdog and mask error handling
 
 ## Daemon processes to be run by init.
 ##
@@ -1409,7 +1358,6 @@ service ueventd /sbin/ueventd
     class core
     critical
     seclabel u:r:ueventd:s0
-    shutdown critical
 
 service healthd /system/bin/healthd
     class core
@@ -1488,10 +1436,6 @@ service iod /system/bin/iod
     class main
     oneshot
     disabled
-
-service cass /system/bin/cass
-    class core
-    group radio wakelock
 
 # Disable Samsung RMM State trigger
 # service vaultkeeperd /system/bin/vaultkeeperd
