--- a/Helios/Ramdisk/ramdisk/init.wifi.rc
+++ b/Helios/Ramdisk/ramdisk/init.wifi.rc
@@ -76,7 +76,7 @@ on post-fs-data
     chown system wifi /vendor/etc/wifi/indoorchannel.info
 
     # for fwpath
-    chown wifi wifi /sys/module/wlan/parameters/fwpath
+    chmod 0666 /sys/module/wlan/parameters/fwpath
 
 	
 on boot
