--- a/arch/arm64/configs/zenlte_defconfig
+++ b/arch/arm64/configs/zenlte_defconfig
@@ -2852,7 +2852,6 @@ CONFIG_DECON_EVENT_LOG=y
 CONFIG_DSIM_ESD_RECOVERY_NOPOWER=y
 # CONFIG_FB_DSU is not set
 # CONFIG_FB_DSU_REG_LOCK is not set
-# CONFIG_LCD_RES is not set
 CONFIG_EXYNOS_VPP=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
@@ -2863,15 +2862,12 @@ CONFIG_LCD_ALPM=y
 CONFIG_LCD_BURNIN_CORRECTION=y
 CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
-CONFIG_LCD_DOZE_MODE=y
+# CONFIG_LCD_DOZE_MODE is not set
 # CONFIG_PANEL_S6E3HF2_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HA2_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HA3_DYNAMIC is not set
 CONFIG_PANEL_S6E3HF3_DYNAMIC=y
 # CONFIG_PANEL_S6E3FA3_A8XE is not set
-# CONFIG_PANEL_DDI_SPI is not set
-CONFIG_VDDR_1p5V_ALPM=y
-# CONFIG_LCD_WEAKNESS_CCB is not set
 # CONFIG_EXYNOS_DECON_DUAL_DISPLAY is not set
 # CONFIG_PANEL_S6E3FA3 is not set
 # CONFIG_EXYNOS_DECON_DUAL_DSI is not set
