--- a/Helios/Ramdisk/ramdisk/init.samsungexynos7420.rc
+++ b/Helios/Ramdisk/ramdisk/init.samsungexynos7420.rc
@@ -7,6 +7,7 @@ import init.fac.rc
 import init.exynos7420_fac.rc
 import init.gps.rc
 import init.spectrum.rc
+import init.helios.rc
 import atrace.rc
 
 on early-init
