--- a/Helios/Ramdisk/ramdisk/init.wifi.rc
+++ b/Helios/Ramdisk/ramdisk/init.wifi.rc
@@ -6,71 +6,78 @@
 on post-fs-data
     # give system access to wpa_supplicant.conf for backup and restore
     mkdir /data/misc/wifi 0770 wifi system
-    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
-    chmod 0660 /data/misc/wifi/p2p_supplicant.conf
-    chown system wifi /data/misc/wifi/wpa_supplicant.conf
-    chown system wifi /data/misc/wifi/p2p_supplicant.conf
-    mkdir /data/misc/wifi_share_profile 0771 wifi system
-    mkdir /data/misc/wifi_hostapd 0771 wifi system
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wifi/log/ 0770 wifi system
-    mkdir /data/media/wifi/ 0770 wifi system
-    mkdir /data/media/wifi/log/ 0770 wifi system
-    mkdir /data/log 0775 system log
-    mkdir /data/log/wifi/ 0775 system root
-    mkdir /data/misc/dhcp 0775 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
-    chown system system /sys/kernel/ipv4/tcp_delack_seg
+    mkdir /data/misc/dhcp 0775 dhcp dhcp 
+
+    # Create the directories used by the Wireless subsystem
+    mkdir /data/vendor/wifi 0770 wifi wifi
+    mkdir /data/vendor/wifi/sockets 0770 wifi wifi
+    mkdir /data/vendor/wifi/hostapd 0770 wifi wifi
+    mkdir /data/vendor/wifi/hostapd/ctrl 0770 wifi wifi
+    mkdir /data/vendor/wifi/wpa 0770 wifi wifi
+
+    # copy wpa_supplicant.conf
+    copy /system/vendor/etc/wifi/wpa_supplicant.conf /data/vendor/wifi/wpa/wpa_supplicant.conf
+    chown wifi system /data/vendor/wifi/wpa/wpa_supplicant.conf
+    chmod 0660 /data/vendor/wifi/wpa/wpa_supplicant.conf
 
     # for WIFI TRP/TIS
-    mkdir /data/misc/conn 0771 system root
-    chown system root /data/misc/conn/.psm.info
-    chmod 0664 /data/misc/conn/.psm.info
-
+    write /data/.psm.info 1
+    chown system root /data/.psm.info
+    chmod 0664 /data/.psm.info
 
     # for WIFI Antenna Selection
-    chown system root /data/misc/conn/.ant.info
-    chmod 0664 /data/misc/conn/.ant.info
+    write /data/.wificable.info E
+    chown system root /data/.wificable.info
+    chmod 0664 /data/.wificable.info
 
     # for WIFI Version
-    write /data/misc/conn/.wifiver.info 0
-    chown system root /data/misc/conn/.wifiver.info
-    chmod 0666 /data/misc/conn/.wifiver.info
-	
-    # for WIFI Antenna
-    write /data/misc/conn/.wificable.info E
-    chown system root /data/misc/conn/.wificable.info
-    chmod 0666 /data/misc/conn/.wificable.info
-
-
-    # for WIFI DONGLE EVENT LOG
-    write /data/misc/conn/.logtrace.info 1
-    chown system root /data/misc/conn/.logtrace.info
-    chmod 0666 /data/misc/conn/.logtrace.info
+    write /data/.wifiver.info 0
+    chown system root /data/.wifiver.info
+    chmod 0666 /data/.wifiver.info
 
     # for WIFI Cert
-    chmod 0664 /data/misc/conn/.bustxglom.info
-    chmod 0664 /data/misc/conn/.roamoff.info
-    chmod 0664 /data/misc/conn/.frameburst.info
-    chmod 0664 /data/misc/conn/.txbf.info
-    # for WIFI MAC address
+    chmod 0664 /data/.bustxglom.info
+    chmod 0664 /data/.roamoff.info
+    chmod 0664 /data/.frameburst.info
+    chmod 0664 /data/.txbf.info
+    
+	# for WIFI MAC address
     mkdir /efs/wifi 0775 radio system
     chown system wifi /efs/wifi/.mac.info
-    chmod 0666 /efs/wifi/.mac.info
+    chmod 0660 /efs/wifi/.mac.info
 
+    # Set permissions for firmware path control
+    chown wifi wifi /sys/module/dhd/parameters/firmware_path
+    chmod 0660 /sys/module/dhd/parameters/firmware_path
 
-    # for fwpath
-    chmod 0666 /sys/module/wlan/parameters/fwpath
-
-	
 on boot
-    setprop wifi.interface wlan0
+	setprop wifi.interface wlan0
 
-    # Wifi firmware reload path   
-    chown wifi wifi /sys/module/dhd/parameters/firmware_path	
-	
+    # Pcie WiFi T-put setting
+	write /sys/class/net/wlan0/queues/rx-0/rps_cpus 00
+
+service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
+        -O/data/vendor/wifi/wpa/sockets \
+        -g@android:wpa_wlan0
+	# we will start as root and wpa_supplicant will switch to user wifi
+    # after setting up the capabilities required for WEXT
+    # user wifi
+    # group wifi inet keystore
+    interface android.hardware.wifi.supplicant@1.0::ISupplicant default
+    interface android.hardware.wifi.supplicant@1.1::ISupplicant default
+    class main
+    socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
 
 
+# tiburona
+# start for WiFi MFG (TestMode)
+service mfgloader /vendor/bin/hw/mfgloader
+    class main
+    disabled
+    oneshot
 
 service wlandutservice /system/bin/wlandutservice
     class main
@@ -79,18 +86,24 @@ service wlandutservice /system/bin/wlandutservice
     disabled
     oneshot
 
-service macloader /system/vendor/bin/hw/macloader
+service macloader /vendor/bin/macloader
     class main
     oneshot
 
+# Run deferred initcalls of builtin kernel modules (bcmdhd)
+service wifiloader /vendor/bin/hw/wifiloader
+    class main
+    oneshot
+    disabled
+
 on property:init.svc.macloader=stopped
-    chown system root /data/misc/conn/.cid.info
-    chmod 0664 /data/misc/conn/.cid.info
+    chown system root /data/.cid.info
+    chmod 0664 /data/.cid.info
     chown system root /data/.rev
     chmod 0664 /data/.rev
+# end of WiFi MFG (TestMode)
 
-# for wlan FTM app
-service ftm_ptt /system/bin/ftm_ptt -d
-    user root
-    group radio system
+service olsrd /system/bin/olsrd -f /etc/wifi/olsrd.conf
+    class main
     disabled
+    oneshot
