defcon: add S6x configs and update noble

--- a/arch/arm64/configs/noblelte_defconfig
+++ b/arch/arm64/configs/noblelte_defconfig
@@ -1036,6 +1036,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_VSOCKETS is not set
 # CONFIG_NETLINK_MMAP is not set
 # CONFIG_NETLINK_DIAG is not set
+# CONFIG_KNOX_NCM is not set
 # CONFIG_RMNET_DATA is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
@@ -2870,7 +2871,7 @@ CONFIG_LCD_HMT=y
 CONFIG_LCD_BURNIN_CORRECTION=y
 CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
-# CONFIG_LCD_DOZE_MODE is not set
+CONFIG_LCD_DOZE_MODE=y
 # CONFIG_PANEL_S6E3HF2_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HA2_DYNAMIC is not set
 CONFIG_PANEL_S6E3HA3_DYNAMIC=y
@@ -4280,11 +4281,14 @@ CONFIG_SDFAT_DEBUG=y
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
 # CONFIG_SDFAT_DBG_BUGON is not set
+CONFIG_SDFAT_STATISTICS=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_EXFAT_SUPPORT_STLOG=y
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=m
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
