--- a/arch/arm64/configs/zeroflte_defconfig
+++ b/arch/arm64/configs/zeroflte_defconfig
@@ -476,7 +476,7 @@ CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 CONFIG_MIN_DIRTY_THRESH_PAGES=2560
-CONFIG_MMAP_READAROUND_LIMIT=0
+CONFIG_MMAP_READAROUND_LIMIT=32
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ARMV7_COMPAT=y
 CONFIG_ARMV7_COMPAT_CPUINFO=y
@@ -1068,8 +1068,8 @@ CONFIG_BT_HIDP=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_BT_BCM43455 is not set
-# CONFIG_BT_BCM4358 is not set
-CONFIG_BT_BCM4359=y
+CONFIG_BT_BCM4358=y
+# CONFIG_BT_BCM4359 is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -1250,7 +1250,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
 CONFIG_CHECK_SIMSLOT_COUNT=y
-CONFIG_CHECK_GPIO_DETECT=y
+# CONFIG_CHECK_GPIO_DETECT is not set
 # CONFIG_TIMA_LOG is not set
 # CONFIG_SEC_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
@@ -1328,14 +1328,21 @@ CONFIG_USE_MUIC=y
 CONFIG_USE_SAFEOUT=y
 CONFIG_MUIC_NOTIFIER=y
 # CONFIG_SAMSUNG_MUIC is not set
-# CONFIG_MUIC_ADCMODE_SWITCH_WA is not set
-# CONFIG_MUIC_RUSTPROOF_ON_USER is not set
+CONFIG_MUIC_ADCMODE_SWITCH_WA=y
+CONFIG_MUIC_RUSTPROOF_ON_USER=y
 # CONFIG_MUIC_FSA9480 is not set
+CONFIG_MUIC_MAX77843=y
+CONFIG_HV_MUIC_MAX77843_AFC=y
+CONFIG_MUIC_MAX77843_IGNORE_ADCERR_WA=y
+CONFIG_MUIC_MAX77843_RESET_WA=y
+# CONFIG_MUIC_MAX77843_SUPPORT_LANHUB is not set
+# CONFIG_MUIC_MAX77843_RUSTPROOF_CHARGING is not set
 CONFIG_MUIC_MAX77833=y
 CONFIG_HV_MUIC_MAX77833_AFC=y
 CONFIG_MUIC_MAX77833_SHAKEID_WA=y
 # CONFIG_MUIC_MAX77833_NOT_SUPPORT_WCIN is not set
 # CONFIG_MUIC_S2MM001 is not set
+# CONFIG_MUIC_DET_JACK is not set
 
 #
 # SCSI device support
@@ -1719,8 +1726,8 @@ CONFIG_BROADCOM_WIFI=y
 # CONFIG_BCM4335 is not set
 # CONFIG_BCM4339 is not set
 # CONFIG_BCM4354 is not set
-# CONFIG_BCM4358 is not set
-CONFIG_BCM4359=y
+CONFIG_BCM4358=y
+# CONFIG_BCM4359 is not set
 # CONFIG_BCM43241 is not set
 # CONFIG_BCM4334W is not set
 # CONFIG_BCM43455 is not set
@@ -1733,13 +1740,14 @@ CONFIG_WLAIBSS=y
 CONFIG_WL_RELMCAST=y
 # CONFIG_WL_NAN is not set
 CONFIG_BCMDHD_PCIE=y
-CONFIG_BCMDHD_PREALLOC_PKTIDMAP=y
+# CONFIG_BCMDHD_PREALLOC_PKTIDMAP is not set
 CONFIG_BCMDHD_PREALLOC_MEMDUMP=y
 # CONFIG_WLAN_HERO is not set
 # CONFIG_WLAN_HERO2 is not set
 # CONFIG_WLAN_GRACE is not set
 CONFIG_SPLIT_ARGOS_SET=y
 # CONFIG_BCM4358_A3 is not set
+# CONFIG_BCMDHD_DEBUG_PAGEALLOC is not set
 # CONFIG_BCM43454 is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
@@ -1789,7 +1797,7 @@ CONFIG_CERTIFY_HALL=y
 # Input Device Drivers
 #
 CONFIG_INPUT_KEYBOARD=y
-CONFIG_KEYBOARD_ABOV_TOUCH=y
+# CONFIG_KEYBOARD_ABOV_TOUCH is not set
 # CONFIG_KEYBOARD_ABOV_TOUCH_FOLDER is not set
 # CONFIG_KEYBOARD_ADP5588 is not set
 # CONFIG_KEYBOARD_ADP5589 is not set
@@ -1886,8 +1894,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_MXT540E is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_DSX is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_DSX2 is not set
-# CONFIG_TOUCHSCREEN_FTS is not set
-CONFIG_TOUCHSCREEN_FTS5AD56=y
+CONFIG_TOUCHSCREEN_FTS=y
+# CONFIG_TOUCHSCREEN_FTS5AD56 is not set
 # CONFIG_TOUCHSCREEN_SEC_TS is not set
 # CONFIG_TOUCHSCREEN_SEC_TS_GLOVEMODE is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS438 is not set
@@ -2168,7 +2176,7 @@ CONFIG_SEC_GPIO_DVS=y
 CONFIG_MST_SECURE_GPIO=y
 CONFIG_SENSORS_FP_SPI_GPIO="gpv7"
 # CONFIG_MST_NOBLE_TARGET is not set
-CONFIG_MST_ZEN_TARGET=y
+# CONFIG_MST_ZEN_TARGET is not set
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
@@ -2453,7 +2461,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_MAX77804K is not set
 # CONFIG_MFD_MAX77823 is not set
 # CONFIG_MFD_MAX77828 is not set
-# CONFIG_MFD_MAX77843 is not set
+CONFIG_MFD_MAX77843=y
 CONFIG_MFD_MAX77833=y
 # CONFIG_MFD_MAX77888 is not set
 # CONFIG_MFD_MAX8907 is not set
@@ -2502,7 +2510,7 @@ CONFIG_MFD_ARIZONA_DEFERRED_RESUME=y
 # CONFIG_MFD_ARIZONA_I2C is not set
 CONFIG_MFD_ARIZONA_SPI=y
 # CONFIG_MFD_WM5102 is not set
-# CONFIG_MFD_FLORIDA is not set
+CONFIG_MFD_FLORIDA=y
 # CONFIG_MFD_VEGAS is not set
 # CONFIG_MFD_WM8997 is not set
 CONFIG_MFD_CLEARWATER=y
@@ -2533,6 +2541,7 @@ CONFIG_REGULATOR_ARIZONA=y
 # CONFIG_REGULATOR_MAX8973 is not set
 # CONFIG_REGULATOR_MAX77826 is not set
 CONFIG_REGULATOR_MAX77838=y
+CONFIG_REGULATOR_MAX77843=y
 CONFIG_REGULATOR_MAX77833=y
 # CONFIG_REGULATOR_LP3971 is not set
 # CONFIG_REGULATOR_LP3972 is not set
@@ -2639,11 +2648,11 @@ CONFIG_COMPANION_STANDBY_USE=y
 CONFIG_OIS_USE=y
 # CONFIG_OIS_FW_UPDATE_THREAD_USE is not set
 CONFIG_AF_HOST_CONTROL=y
-# CONFIG_CAMERA_ZERO is not set
+CONFIG_CAMERA_ZERO=y
 # CONFIG_CAMERA_MARINE is not set
 # CONFIG_CAMERA_VLTE is not set
 # CONFIG_CAMERA_NOBLE is not set
-CONFIG_CAMERA_ZENLTE=y
+# CONFIG_CAMERA_ZENLTE is not set
 # CONFIG_CAMERA_ROYCE is not set
 # CONFIG_CAMERA_A8XE is not set
 CONFIG_VIDEO_EXYNOS_SCALER=y
@@ -2859,12 +2868,11 @@ CONFIG_DECON_BLOCKING_MODE=y
 CONFIG_DECON_EVENT_LOG=y
 # CONFIG_DSIM_ESD_RECOVERY_NOPOWER is not set
 # CONFIG_FB_DSU is not set
-# CONFIG_FB_DSU_REG_LOCK is not set
 CONFIG_EXYNOS_VPP=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
-CONFIG_EXYNOS_DECON_LCD_MCD=y
+# CONFIG_EXYNOS_DECON_LCD_MCD is not set
 CONFIG_LCD_HMT=y
 # CONFIG_LCD_ALPM is not set
 CONFIG_LCD_BURNIN_CORRECTION=y
@@ -2872,9 +2880,9 @@ CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
 CONFIG_LCD_DOZE_MODE=y
 # CONFIG_PANEL_S6E3HF2_DYNAMIC is not set
-# CONFIG_PANEL_S6E3HA2_DYNAMIC is not set
+CONFIG_PANEL_S6E3HA2_DYNAMIC=y
 # CONFIG_PANEL_S6E3HA3_DYNAMIC is not set
-CONFIG_PANEL_S6E3HF3_DYNAMIC=y
+# CONFIG_PANEL_S6E3HF3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_A8XE is not set
 # CONFIG_EXYNOS_DECON_DUAL_DISPLAY is not set
 # CONFIG_PANEL_S6E3FA3 is not set
@@ -2945,7 +2953,7 @@ CONFIG_SND_JACK=y
 # CONFIG_SND_HRTIMER is not set
 CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_SND_SUPPORT_OLD_API=y
-# CONFIG_SND_VERBOSE_PROCFS is not set
+CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_VERBOSE_PRINTK is not set
 # CONFIG_SND_DEBUG is not set
 # CONFIG_SND_RAWMIDI_SEQ is not set
@@ -3034,9 +3042,7 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_DESIGNWARE_I2S is not set
 CONFIG_SND_SOC_SAMSUNG=y
 CONFIG_SND_SAMSUNG_I2S=y
-CONFIG_SND_SAMSUNG_COMPR=y
 CONFIG_SND_SAMSUNG_AUDSS=y
-CONFIG_SND_ESA_SA_EFFECT=y
 CONFIG_SND_SAMSUNG_IOMMU=y
 # CONFIG_SND_SAMSUNG_FAKEDMA is not set
 # CONFIG_SND_SOC_SAMSUNG_SMDK_WM8994 is not set
@@ -3051,9 +3057,9 @@ CONFIG_SND_SAMSUNG_IOMMU=y
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL5422_ARIZONA is not set
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL5433_FLORIDA is not set
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL5433_ARIZONA is not set
-# CONFIG_SND_SOC_SAMSUNG_ZERO_FLORIDA is not set
-# CONFIG_SND_SOC_SAMSUNG_ZERO_CLEARWATER is not set
-CONFIG_SND_SOC_SAMSUNG_NOBLE_CLEARWATER=y
+CONFIG_SND_SOC_SAMSUNG_ZERO_FLORIDA=y
+CONFIG_SND_SOC_SAMSUNG_ZERO_CLEARWATER=y
+# CONFIG_SND_SOC_SAMSUNG_NOBLE_CLEARWATER is not set
 CONFIG_SND_SOC_SAMSUNG_ARIZONA=y
 # CONFIG_SND_SOC_SAMSUNG_ZERO_HDMI is not set
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL5430_DUMMY is not set
@@ -3063,11 +3069,9 @@ CONFIG_SND_SOC_SAMSUNG_ARIZONA=y
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL7580_COD3022X is not set
 # CONFIG_SND_SAMSUNG_AUX_HDMI is not set
 # CONFIG_SND_SAMSUNG_AUX_SPDIF is not set
-CONFIG_SND_SAMSUNG_SEIREN_DMA=y
 CONFIG_SND_SAMSUNG_SEIREN=y
-CONFIG_SND_SAMSUNG_SEIREN_OFFLOAD=y
+# CONFIG_SND_SAMSUNG_SEIREN_OFFLOAD is not set
 # CONFIG_SND_SAMSUNG_SEIREN_DEBUG is not set
-CONFIG_SND_SAMSUNG_ELPE=y
 # CONFIG_SND_SAMSUNG_DEBUGFS is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
@@ -3081,6 +3085,7 @@ CONFIG_SND_SOC_MAXIM_DSM_CAL=y
 CONFIG_SND_SOC_MAX98505=y
 # CONFIG_SND_SOC_MAX98505A is not set
 # CONFIG_SND_SOC_MAX98506 is not set
+CONFIG_SND_SOC_FLORIDA=y
 CONFIG_SND_SOC_CLEARWATER=y
 CONFIG_SND_SOC_DUMMY_CODEC=y
 
@@ -3498,6 +3503,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_OT200 is not set
 # CONFIG_LEDS_BLINKM is not set
 CONFIG_LEDS_MAX77833_RGB=y
+CONFIG_LEDS_MAX77843_RGB=y
 CONFIG_LEDS_S2MPB02=y
 CONFIG_LEDS_KTD2692=y
 
@@ -3894,9 +3900,10 @@ CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_THERMAL_OFFSET=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ODT_OFF=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ADV_MIF_THERMAL_POLLING=y
-CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_TDNR=y
+# CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_TDNR is not set
 # CONFIG_DISABLE_DRAM_PBR is not set
 CONFIG_MOTOR_DRV_MAX77833=y
+CONFIG_MOTOR_DRV_MAX77843=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
 # CONFIG_MOTOR_DRV_ISA1400 is not set
 # CONFIG_HAPTIC_ISA1200 is not set
@@ -4016,14 +4023,14 @@ CONFIG_BATTERY_SWELLING=y
 # CONFIG_BATTERY_SWELLING_SELF_DISCHARGING is not set
 CONFIG_INBATTERY=y
 CONFIG_CALC_TIME_TO_FULL=y
-CONFIG_BATTERY_AGE_FORECAST=y
+# CONFIG_BATTERY_AGE_FORECAST is not set
 CONFIG_BATTERY_CISD=y
 # CONFIG_FUELGAUGE_DUMMY is not set
 # CONFIG_FUELGAUGE_MAX17042 is not set
 # CONFIG_FUELGAUGE_MAX17048 is not set
 # CONFIG_FUELGAUGE_MAX17050 is not set
 # CONFIG_FUELGAUGE_MAX77823 is not set
-# CONFIG_FUELGAUGE_MAX77843 is not set
+CONFIG_FUELGAUGE_MAX77843=y
 CONFIG_FUELGAUGE_MAX77833=y
 # CONFIG_CHARGER_DUMMY is not set
 # CONFIG_CHARGER_SMB328 is not set
@@ -4031,22 +4038,22 @@ CONFIG_FUELGAUGE_MAX77833=y
 # CONFIG_CHARGER_BQ24191 is not set
 # CONFIG_CHARGER_BQ24260 is not set
 # CONFIG_CHARGER_MAX77823 is not set
-# CONFIG_CHARGER_MAX77843 is not set
+CONFIG_CHARGER_MAX77843=y
 CONFIG_CHARGER_MAX77833=y
-# CONFIG_WIRELESS_CHARGER_INBATTERY is not set
+CONFIG_WIRELESS_CHARGER_INBATTERY=y
 CONFIG_WIRELESS_CHARGER_INBATTERY_CS100=y
 # CONFIG_WIRELESS_CHARGER_INBATTERY_5V_FIX is not set
-CONFIG_WIRELESS_CHARGER_HIGH_VOLTAGE=y
-# CONFIG_WIRELESS_CHARGER_BQ51221 is not set
+# CONFIG_WIRELESS_CHARGER_HIGH_VOLTAGE is not set
+CONFIG_WIRELESS_CHARGER_BQ51221=y
 # CONFIG_WIRELESS_CHARGER_P9027S is not set
-CONFIG_WIRELESS_CHARGER_P9220=y
-CONFIG_WIRELESS_FIRMWARE_UPDATE=y
-CONFIG_WIRELESS_CHARGER_MAX77900=y
+# CONFIG_WIRELESS_CHARGER_P9220 is not set
+# CONFIG_WIRELESS_CHARGER_MAX77900 is not set
 CONFIG_AFC_CHARGER_MODE=y
 CONFIG_SAMSUNG_LPM_MODE=y
-CONFIG_WIRELESS_CHARGER_THM=y
+# CONFIG_WIRELESS_CHARGER_THM is not set
 # CONFIG_EN_OOPS is not set
-# CONFIG_DISABLE_SAVE_CAPACITY_MAX is not set
+CONFIG_DISABLE_SAVE_CAPACITY_MAX=y
+# CONFIG_FIX_CHG_FQ_4MHZ is not set
 # CONFIG_STORE_MODE is not set
 # CONFIG_BATTERY_SAMSUNG_V2 is not set
 # CONFIG_SW_SELF_DISCHARGING is not set
@@ -4070,12 +4077,12 @@ CONFIG_SENSORS_MULTIPLE_GLASS_TYPE=y
 CONFIG_SENSORS_SSP_IRDATA_FOR_CAMERA=y
 # CONFIG_SENSORS_SX9310 is not set
 # CONFIG_SENSORS_SSP_NOBLELTE is not set
-CONFIG_SENSORS_SSP_ZENLTE=y
+# CONFIG_SENSORS_SSP_ZENLTE is not set
 # CONFIG_SENSORS_SSP_VLTE is not set
 # CONFIG_SENSORS_SSP_ROYCELTE is not set
 # CONFIG_SENSORS_SSP_ATUC128L5HAR is not set
 # CONFIG_SENSORS_SSP_6AXIS is not set
-# CONFIG_SENSORS_SSP_MPU6500 is not set
+CONFIG_SENSORS_SSP_MPU6500=y
 # CONFIG_SENSORS_SSP_BMI168 is not set
 # CONFIG_SENSORS_SSP_BMP280 is not set
 CONFIG_SENSORS_SSP_TMD4903=y
@@ -4106,13 +4113,13 @@ CONFIG_SENSORS_SSP_LPS25H=y
 # CONFIG_SENSORS_SSP_SHTC1 is not set
 CONFIG_SENSORS_SSP_BBD=y
 # CONFIG_SENSORS_SSP_ICM20610 is not set
-CONFIG_SENSORS_SSP_K6DS3TR=y
+# CONFIG_SENSORS_SSP_K6DS3TR is not set
 CONFIG_SENSORS_SSP_YAS537=y
 # CONFIG_SENSORS_SSP_STM32F401 is not set
 # CONFIG_SENSORS_MAX86902_LED_5V is not set
 # CONFIG_SENSOR_SSP_PROXIMTY_FOR_WINDOW_TYPE is not set
 # CONFIG_SENSORS_SSP_TMG399x is not set
-# CONFIG_SENSORS_SSP_SX9306 is not set
+CONFIG_SENSORS_SSP_SX9306=y
 CONFIG_SENSORS_SSP_INTERRUPT_GYRO_SENSOR=y
 # CONFIG_SENSORS_SSP_VLTE_W02 is not set
 # CONFIG_SENSORS_SSP_MARINELTE is not set
