defconfig: Update zero

--- a/arch/arm64/configs/zeroflte_defconfig
+++ b/arch/arm64/configs/zeroflte_defconfig
@@ -150,7 +150,7 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
@@ -223,14 +223,13 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MODVERSIONS=y
+# CONFIG_MODVERSIONS is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
 CONFIG_STOP_MACHINE=y
@@ -419,7 +418,7 @@ CONFIG_HMP_FAST_CPU_MASK="4-7"
 CONFIG_HMP_SLOW_CPU_MASK="0-3"
 CONFIG_HMP_VARIABLE_SCALE=y
 CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
-CONFIG_SCHED_HMP_LITTLE_PACKING=y
+# CONFIG_SCHED_HMP_LITTLE_PACKING is not set
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 CONFIG_LOCAL_TIMERS=y
@@ -636,7 +635,7 @@ CONFIG_EXYNOS_CL_DVFS_MIF=y
 CONFIG_EXYNOS_MBOX_DEFAULT_POLLING=y
 # CONFIG_EXYNOS_MBOX_INTERRUPT is not set
 CONFIG_EXYNOS_MBOX_POLLING=y
-# CONFIG_EXYNOS_APM_VOLTAGE_DEBUG is not set
+CONFIG_EXYNOS_APM_VOLTAGE_DEBUG=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -3789,7 +3788,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 # CONFIG_SW_SYNC_USER is not set
-# CONFIG_SEC_OOM_KILLER is not set
+CONFIG_SEC_OOM_KILLER=y
 CONFIG_ION=y
 CONFIG_ION_TEST=y
 CONFIG_ION_EXYNOS=y
@@ -4163,7 +4162,7 @@ CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
 CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
 # CONFIG_GATOR is not set
 CONFIG_TRACE=y
-# CONFIG_EXYNOS_NOC_DEBUGGING is not set
+CONFIG_EXYNOS_NOC_DEBUGGING=y
 CONFIG_EXYNOS_SNAPSHOT=y
 CONFIG_EXYNOS_SNAPSHOT_CALLSTACK=4
 CONFIG_EXYNOS_SNAPSHOT_IRQ_EXIT=y
@@ -4298,7 +4297,7 @@ CONFIG_PROC_FS=y
 # CONFIG_PROC_KCORE is not set
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
-# CONFIG_PROC_STLOG is not set
+CONFIG_PROC_STLOG=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
 # CONFIG_TMPFS_POSIX_ACL is not set
@@ -4340,8 +4339,16 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
-# CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_UFS_FS=m
+# CONFIG_UFS_FS_WRITE is not set
+# CONFIG_UFS_DEBUG is not set
+CONFIG_F2FS_FS=m
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
